--- a/style.css
+++ b/style.css
@@ -25,8 +25,6 @@ h2 {
     font-weight: 700;
     font-style: normal;
     color: #EEEEEE;
-    padding-top: 15px;
-    padding-bottom: 10px;
 }
 
 h2.menu {
@@ -36,6 +34,20 @@ h2.menu {
     color: #EEEEEE;
     padding-top: 20px;
     padding-bottom: 20px;
+}
+
+h2.jobTitle {
+    font-family: "IBM Plex Mono";
+    font-weight: 600;
+    font-style: normal;
+    color: #EEEEEE;
+}
+
+h3 {
+    font-family: "IBM Plex Mono";
+    font-weight: 600;
+    font-style: normal;
+    color: #76ABAE;
 }
 
 p {
@@ -55,10 +67,28 @@ a {
     text-decoration: underline dashed;
 }
 
+a.italics {
+    font-family: "IBM Plex Mono";
+    font-weight: 500;
+    font-style: italic;
+    color: #EEEEEE;
+    padding-bottom: 10px;
+    text-decoration: underline dashed;
+}
+
 a:hover {
     font-family: "IBM Plex Mono";
     font-weight: 600;
     font-style: normal;
+    color: #76ABAE;
+    padding-bottom: 10px;
+    text-decoration: underline dashed;
+}
+
+a.italics:hover {
+    font-family: "IBM Plex Mono";
+    font-weight: 500;
+    font-style: italic;
     color: #76ABAE;
     padding-bottom: 10px;
     text-decoration: underline dashed;
