--- a/style.css
+++ b/style.css
@@ -52,6 +52,13 @@ h3 {
     color: #76ABAE;
 }
 
+h4 {
+    font-family: "IBM Plex Mono";
+    font-weight: 600;
+    font-style: normal;
+    color: #EEEEEE;
+}
+
 p {
     font-family: "IBM Plex Mono";
     font-weight: 400;
@@ -134,6 +141,18 @@ a.pLink:hover {
     text-decoration-style: dashed;
     text-underline-offset: 5px;
     cursor: pointer;
+}
+
+li::marker {
+  color: #76ABAE;
+}
+
+li {
+    font-family: "IBM Plex Mono";
+    font-weight: 400;
+    font-style: normal;
+    color: #EEEEEE;
+    padding-bottom: 10px;
 }
 
 hr.primary {
