--- a/style.css
+++ b/style.css
@@ -13,6 +13,41 @@ body {
   min-height: 100vh;
 }
 
+.header {
+  overflow: hidden;
+  padding-top: 20px;
+}
+
+.header a {
+  float: left;
+  text-align: center;
+  text-decoration: none;
+  line-height: 25px;
+}
+    
+.header h2 {
+  float: left;
+  text-align: center;
+  text-decoration: none;
+  line-height: 25px;
+}
+
+.header h3 {
+  float: left;
+  text-align: center;
+  text-decoration: none;
+  line-height: 25px;
+}
+    
+.header-elements {
+  padding-left: 20px;
+  text-decoration: none;
+}
+    
+.header-right {
+  float: right;
+}
+
 h1 {
     font-family: "IBM Plex Mono";
     font-weight: 700;
@@ -269,6 +304,27 @@ body {
     margin-left: 20px;
     margin-right: 20px;        
 }
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+    
+.header h2 {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+    
+.header h3 {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .header-right {
+    float: none;
+  }
 h1 {
     font-size: 2em !important;
  }
