--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ h2 {
     font-weight: 700;
     font-style: normal;
     color: #EEEEEE;
+    font-size: 1.3rem;
+    line-height: 1.6;
 }
 
 h3 {
@@ -40,6 +42,7 @@ h3 {
     font-weight: 600;
     font-style: normal;
     color: #76ABAE;
+    font-size: 1rem;
 }
 
 h4 {
@@ -246,7 +249,23 @@ a.p-link:hover {
 
 /* Other */
 h2.job-title {
-    font-weight: 600;
+    font-weight: 400;
+}
+
+a.job-title {
+    font-weight: 800;
+}
+
+a.exp-dates {
+    font-weight: 400;
+    text-decoration: none;
+    color: #76ABAE;
+    cursor: auto;
+}
+
+a.project-link {
+    font-weight: 400;
+    color: #76ABAE;
 }
 
 a.no-decoration {
